# cine_ai_hackfest_shot_ok

./: .gitignore
backend/: .env.example  .gitignore  COOLIFY_DEPLOYMENT.md  Dockerfile  IMPLEMENTATION_PLAN.md  IMPROVEMENT_SUGGESTIONS.md  QUERY_EXAMPLES.md  README.md  VIDEO_IN_DOCKER.md  main.py  pyproject.toml  run_index_20scenes.py  run_index_all.py
backend/app/: main.py
backend/app/core/: config.py  utils.py
backend/app/data/: __init__.py  loaders.py
backend/app/models/: schemas.py
backend/app/services/: embedding.py  query_understanding.py  rerank.py  screenplay_to_json.py  tenglish_search.py  vector_db.py
backend/video/: .gitkeep
frontend/: .env.example  package-lock.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/screenplay/: page.tsx
frontend/src/app/search/: page.tsx
frontend/src/app/telugu-search/: page.tsx
frontend/src/components/: ClipCard.tsx
frontend/src/lib/: api.ts
